# breeze

./: CMakeLists.txt
kdecoration/: CMakeLists.txt
kdecoration/config/: CMakeLists.txt
kstyle/: CMakeLists.txt  breezepropertynames.cpp  breezestyle.cpp
kstyle/animations/: breezeanimationdata.h
kstyle/config/: CMakeLists.txt
libbreezecommon/: CMakeLists.txt
misc/breezehighcontrasttobreezedark/: CMakeLists.txt
misc/breezetobreezeclassic/: CMakeLists.txt
misc/breezetobreezelight/: CMakeLists.txt
